--- a/package.json
+++ b/package.json
@@ -1,54 +1,54 @@
 {
-	"name": "v2-services",
-	"version": "0.1.1",
-	"description": "Multithreaded SOA draft",
-	"main": "index.js",
-	"directories": {
-		"test": "test"
-	},
-	"scripts": {
-		"test": "mocha ./build/**/*.test.js -r ./build/index.js"
-	},
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/sdk-group/iris-v2"
-	},
-	"keywords": [
-		"IRIS"
-	],
-	"author": "SS",
-	"license": "ISC",
-	"bugs": {
-		"url": "https://github.com/sdk-group/iris-v2/issues"
-	},
-	"homepage": "https://github.com/sdk-group/iris-v2",
-	"dependencies": {
-		"Couchbird": "git+https://github.com/YuuKohaku/Couchbird.git",
-		"bluebird": "^2.9.24",
-		"cbird-rdf": "git+https://github.com/YuuKohaku/cbird-rdf.git",
-		"custom-queue": "git+https://github.com/artificial-life/custom-queue",
-		"jsonwebtoken": "^5.4.1",
-		"lodash": "^3.7.0",
-		"make-error": "^1.0.2",
-		"node-uuid": "^1.4.3",
-		"request": "^2.55.0",
-		"socket.io": "^1.3.7",
-		"sound-conjunct": "git+https://github.com/YuuKohaku/sound-conjunct.git",
-		"traverse": "^0.6.6",
-		"validator": "^3.40.0"
-	},
-	"devDependencies": {
-		"chai": "^3.3.0",
-		"gulp": "^3.9.0",
-		"gulp-babel": "^5.1.0",
-		"gulp-changed": "^1.2.1",
-		"gulp-concat": "^2.5.2",
-		"gulp-develop-server": "^0.4.3",
-		"gulp-livereload": "^3.8.0",
-		"gulp-mocha": "^2.1.3",
-		"gulp-nodemon": "^2.0.3",
-		"gulp-plumber": "^1.0.1",
-		"gulp-sourcemaps": "^1.5.2",
-		"gulp-watch": "^4.2.4"
-	}
+  "name": "v2-services",
+  "version": "0.1.1",
+  "description": "Multithreaded SOA draft",
+  "main": "index.js",
+  "directories": {
+    "test": "test"
+  },
+  "scripts": {
+    "test": "mocha ./build/**/*.test.js -r ./build/index.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/sdk-group/iris-v2"
+  },
+  "keywords": [
+    "IRIS"
+  ],
+  "author": "SS",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/sdk-group/iris-v2/issues"
+  },
+  "homepage": "https://github.com/sdk-group/iris-v2",
+  "dependencies": {
+    "Couchbird": "git+https://github.com/YuuKohaku/Couchbird.git",
+    "bluebird": "^2.9.24",
+    "cbird-rdf": "git+https://github.com/YuuKohaku/cbird-rdf.git",
+    "global-queue": "git+https://github.com/artificial-life/global-queue",
+    "jsonwebtoken": "^5.4.1",
+    "lodash": "^3.7.0",
+    "make-error": "^1.0.2",
+    "node-uuid": "^1.4.3",
+    "request": "^2.55.0",
+    "socket.io": "^1.3.7",
+    "sound-conjunct": "git+https://github.com/YuuKohaku/sound-conjunct.git",
+    "traverse": "^0.6.6",
+    "validator": "^3.40.0"
+  },
+  "devDependencies": {
+    "chai": "^3.3.0",
+    "gulp": "^3.9.0",
+    "gulp-babel": "^5.1.0",
+    "gulp-changed": "^1.2.1",
+    "gulp-concat": "^2.5.2",
+    "gulp-develop-server": "^0.4.3",
+    "gulp-livereload": "^3.8.0",
+    "gulp-mocha": "^2.1.3",
+    "gulp-nodemon": "^2.0.3",
+    "gulp-plumber": "^1.0.1",
+    "gulp-sourcemaps": "^1.5.2",
+    "gulp-watch": "^4.2.4"
+  }
 }
