--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"finalhandler": "^0.4.1",
 		"global-queue": "git+https://github.com/artificial-life/global-queue",
 		"iris-service-replicator": "git+https://github.com/sdk-group/iris-service-replicator.git",
+		"iris-auth-util": "git+https://github.com/sdk-group/iris-auth-util.git",
 		"iris-service-xmlrpc-v1": "git+https://github.com/sdk-group/iris-service-xmlrpc-v1.git",
 		"lodash": "^3.7.0",
 		"node-uuid": "^1.4.3",
