--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
 	"keywords": [
 		"IRIS"
 	],
-	"author": "SS",
+	"author": "SS & V.",
 	"license": "ISC",
 	"bugs": {
 		"url": "https://github.com/sdk-group/service-engine/issues"
@@ -24,25 +24,20 @@
 	"homepage": "https://github.com/sdk-group/service-engine/",
 	"dependencies": {
 		"bluebird": "^2.9.24",
-		"cookie": "^0.2.3",
-		"finalhandler": "^0.4.1",
 		"global-queue": "git+https://github.com/artificial-life/global-queue",
 		"iris-service-replicator": "git+https://github.com/sdk-group/iris-service-replicator.git",
-		"iris-auth-util": "git+https://github.com/sdk-group/iris-auth-util.git",
-		"iris-service-xmlrpc-v1": "git+https://github.com/sdk-group/iris-service-xmlrpc-v1.git",
 		"lodash": "^3.7.0",
 		"node-uuid": "^1.4.3",
-		"request": "^2.55.0",
-		"router": "^1.1.3",
-		"socket.io": "^1.3.7",
 		"sound-conjunct": "git+https://github.com/YuuKohaku/sound-conjunct.git",
 		"traverse": "^0.6.6",
 		"validator": "^3.40.0",
-		"xmlrpc": "github:olegabr/node-xmlrpc"
 	},
 	"devDependencies": {
 		"Couchbird": "git+https://github.com/YuuKohaku/Couchbird.git",
 		"cbird-rdf": "git+https://github.com/YuuKohaku/cbird-rdf.git",
+		"iris-auth-util": "git+https://github.com/sdk-group/iris-auth-util.git",
+		"iris-service-xmlrpc-v1": "git+https://github.com/sdk-group/iris-service-xmlrpc-v1.git",
+		"xmlrpc": "github:olegabr/node-xmlrpc",
 		"chai": "^3.3.0",
 		"gulp": "^3.9.0",
 		"gulp-babel": "^5.1.0",
