--- a/package.json
+++ b/package.json
@@ -1,63 +1,64 @@
 {
-	"name": "iris-service-engine",
-	"version": "1.0.1",
-	"description": "Multithreaded SOA draft",
-	"main": "index.js",
-	"directories": {
-		"test": "test"
-	},
-	"scripts": {
-		"test": "mocha ./build/**/*.test.js -r ./build/index.js",
-		"install": "gulp --gulpfile build.js"
-	},
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/sdk-group/service-engine/"
-	},
-	"keywords": [
-		"IRIS"
-	],
-	"babel": {
-		"presets": [
-			"node5"
-		],
-		"babelrc": false
-	},
-	"author": "SS & V.",
-	"license": "ISC",
-	"bugs": {
-		"url": "https://github.com/sdk-group/service-engine/issues"
-	},
-	"homepage": "https://github.com/sdk-group/service-engine/",
-	"dependencies": {
-		"bluebird": "^3.1.1",
-		"global-queue": "git+https://github.com/artificial-life/global-queue",
-		"gulp-babel": "^6.1.1",
-		"iris-service-replicator": "git+https://github.com/sdk-group/iris-service-replicator.git",
-		"lodash": "^4.0.0",
-		"node-uuid": "^1.4.7",
-		"resource-management-framework": "git+https://github.com/YuuKohaku/rmf-on-rdf.git",
-		"sound-conjunct": "git+https://github.com/YuuKohaku/sound-conjunct.git",
-		"traverse": "^0.6.6",
-		"validator": "^4.5.1"
-	},
-	"devDependencies": {
-		"babel-preset-node5": "^10.3.0",
-		"Couchbird": "git+https://github.com/YuuKohaku/Couchbird.git",
-		"cbird-rdf": "git+https://github.com/YuuKohaku/cbird-rdf.git",
-		"iris-auth-util": "git+https://github.com/sdk-group/iris-auth-util.git",
-		"iris-service-messagehub": "git+https://github.com/sdk-group/iris-service-messagehub.git",
-		"chai": "^3.4.1",
-		"gulp": "^3.9.0",
-		"gulp-babel": "^6.1.1",
-		"gulp-changed": "^1.3.0",
-		"gulp-concat": "^2.6.0",
-		"gulp-develop-server": "^0.5.0",
-		"gulp-livereload": "^3.8.1",
-		"gulp-mocha": "^2.2.0",
-		"gulp-nodemon": "^2.0.6",
-		"gulp-plumber": "^1.0.1",
-		"gulp-sourcemaps": "^1.6.0",
-		"gulp-watch": "^4.3.5"
-	}
+  "name": "iris-service-engine",
+  "version": "1.0.1",
+  "description": "Multithreaded SOA draft",
+  "main": "index.js",
+  "directories": {
+    "test": "test"
+  },
+  "scripts": {
+    "test": "mocha ./build/**/*.test.js -r ./build/index.js",
+    "install": "gulp --gulpfile build.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/sdk-group/service-engine/"
+  },
+  "keywords": [
+    "IRIS"
+  ],
+  "babel": {
+    "presets": [
+      "es2015-node5"
+    ],
+    "babelrc": false
+  },
+  "author": "SS & V.",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/sdk-group/service-engine/issues"
+  },
+  "homepage": "https://github.com/sdk-group/service-engine/",
+  "dependencies": {
+    "bluebird": "^3.1.1",
+    "global-queue": "git+https://github.com/artificial-life/global-queue",
+    "gulp-babel": "^6.1.1",
+    "iris-service-replicator": "git+https://github.com/sdk-group/iris-service-replicator.git",
+    "lodash": "^4.0.0",
+    "node-uuid": "^1.4.7",
+    "resource-management-framework": "git+https://github.com/YuuKohaku/rmf-on-rdf.git",
+    "sound-conjunct": "git+https://github.com/YuuKohaku/sound-conjunct.git",
+    "traverse": "^0.6.6",
+    "validator": "^4.5.1"
+  },
+  "devDependencies": {
+    "Couchbird": "git+https://github.com/YuuKohaku/Couchbird.git",
+    "babel-preset-es2015-node5": "^1.1.2",
+    "babel-preset-node5": "^10.3.0",
+    "cbird-rdf": "git+https://github.com/YuuKohaku/cbird-rdf.git",
+    "chai": "^3.4.1",
+    "gulp": "^3.9.0",
+    "gulp-babel": "^6.1.1",
+    "gulp-changed": "^1.3.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-develop-server": "^0.5.0",
+    "gulp-livereload": "^3.8.1",
+    "gulp-mocha": "^2.2.0",
+    "gulp-nodemon": "^2.0.6",
+    "gulp-plumber": "^1.0.1",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-watch": "^4.3.5",
+    "iris-auth-util": "git+https://github.com/sdk-group/iris-auth-util.git",
+    "iris-service-messagehub": "git+https://github.com/sdk-group/iris-service-messagehub.git"
+  }
 }
