--- a/package.json
+++ b/package.json
@@ -30,24 +30,28 @@
   },
   "homepage": "https://github.com/sdk-group/service-engine/",
   "dependencies": {
-    "bluebird": "^3.2.1",
+    "bluebird": "^3.3.3",
     "global-queue": "git+https://github.com/artificial-life/global-queue",
     "gulp-babel": "^6.1.2",
     "iris-service-replicator": "git+https://github.com/sdk-group/iris-service-replicator.git",
-    "lodash": "^4.2.1",
+    "lodash": "^4.5.1",
     "node-uuid": "^1.4.7",
     "resource-management-framework": "git+https://github.com/YuuKohaku/rmf-on-rdf.git",
     "sound-conjunct": "git+https://github.com/YuuKohaku/sound-conjunct.git",
     "traverse": "^0.6.6",
-    "validator": "^4.7.0"
+    "validator": "^5.1.0"
   },
   "devDependencies": {
     "Couchbird": "git+https://github.com/YuuKohaku/Couchbird.git",
+    "babel-plugin-transform-strict-mode": "^6.5.2",
+    "babel-plugin-undeclared-variables-check": "^6.5.0",
+    "babel-preset-es2015": "^6.6.0",
     "babel-preset-es2015-node5": "^1.1.2",
-    "babel-preset-node5": "^10.5.0",
+    "babel-preset-node5": "^10.6.0",
     "cbird-rdf": "git+https://github.com/YuuKohaku/cbird-rdf.git",
     "chai": "^3.5.0",
-    "gulp": "^3.9.0",
+    "del": "^2.2.0",
+    "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-changed": "^1.3.0",
     "gulp-concat": "^2.6.0",
@@ -55,8 +59,9 @@
     "gulp-livereload": "^3.8.1",
     "gulp-mocha": "^2.2.0",
     "gulp-nodemon": "^2.0.6",
-    "gulp-plumber": "^1.0.1",
+    "gulp-plumber": "^1.1.0",
     "gulp-sourcemaps": "^1.6.0",
+    "gulp-uglify": "^1.5.3",
     "gulp-watch": "^4.3.5",
     "iris-auth-util": "git+https://github.com/sdk-group/iris-auth-util.git",
     "iris-service-messagehub": "git+https://github.com/sdk-group/iris-service-messagehub.git"
