--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
   },
   "devDependencies": {
     "Couchbird": "git+https://github.com/YuuKohaku/Couchbird.git",
+    "babel-plugin-remove-comments": "^2.0.0",
+    "babel-plugin-transform-remove-console": "^6.5.0",
     "babel-plugin-transform-strict-mode": "^6.6.5",
     "babel-plugin-undeclared-variables-check": "^6.7.2",
     "babel-preset-es2015": "^6.6.0",
