--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "babel-plugin-undeclared-variables-check": "^6.7.2",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-es2015-node5": "^1.2.0",
-    "babel-preset-node5": "^11.0.1",
+    "babel-preset-node5": "^11.0.2",
     "cbird-rdf": "git+https://github.com/YuuKohaku/cbird-rdf.git",
     "chai": "^3.5.0",
     "del": "^2.2.0",
@@ -59,7 +59,7 @@
     "gulp-mocha": "^2.2.0",
     "gulp-nodemon": "^2.0.6",
     "gulp-plumber": "^1.1.0",
-    "gulp-sourcemaps": "^1.6.0",
+    "gulp-sourcemaps": "^2.0.0-alpha",
     "gulp-uglify": "^1.5.3",
     "gulp-watch": "^4.3.5"
   }
