--- a/package.json
+++ b/package.json
@@ -1,66 +1,66 @@
 {
-  "name": "iris-service-engine",
-  "version": "1.0.1",
-  "description": "Multithreaded SOA draft",
-  "main": "index.js",
-  "directories": {
-    "test": "test"
-  },
-  "scripts": {
-    "test": "mocha ./build/**/*.test.js -r ./build/index.js",
-    "install": "gulp --gulpfile build.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/sdk-group/service-engine/"
-  },
-  "keywords": [
+	"name": "iris-service-engine",
+	"version": "1.0.1",
+	"description": "Multithreaded SOA draft",
+	"main": "index.js",
+	"directories": {
+		"test": "test"
+	},
+	"scripts": {
+		"test": "mocha ./build/**/*.test.js -r ./build/index.js",
+		"install": "gulp --gulpfile build.js"
+	},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/sdk-group/service-engine/"
+	},
+	"keywords": [
     "IRIS"
   ],
-  "babel": {
-    "presets": [
+	"babel": {
+		"presets": [
       "es2015-node5"
     ],
-    "babelrc": false
-  },
-  "author": "SS & V.",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/sdk-group/service-engine/issues"
-  },
-  "homepage": "https://github.com/sdk-group/service-engine/",
-  "dependencies": {
-    "bluebird": "^3.4.0",
-    "global-queue": "git+https://github.com/artificial-life/global-queue",
-    "gulp-babel": "^6.1.2",
-    "lodash": "^4.13.1",
-    "moment-timezone": "^0.5.4",
-    "node-uuid": "^1.4.7",
-    "validator": "^5.2.0"
-  },
-  "devDependencies": {
-    "Couchbird": "git+https://github.com/YuuKohaku/Couchbird.git",
-    "babel-plugin-remove-comments": "^2.0.0",
-    "babel-plugin-transform-remove-console": "^6.8.0",
-    "babel-plugin-transform-strict-mode": "^6.8.0",
-    "babel-plugin-undeclared-variables-check": "^6.8.0",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-es2015-node5": "^1.2.0",
-    "babel-preset-node5": "^11.1.0",
-    "cbird-rdf": "git+https://github.com/YuuKohaku/cbird-rdf.git",
-    "chai": "^3.5.0",
-    "del": "^2.2.0",
-    "gulp": "^3.9.1",
-    "gulp-babel": "^6.1.2",
-    "gulp-changed": "^1.3.0",
-    "gulp-concat": "^2.6.0",
-    "gulp-develop-server": "^0.5.1",
-    "gulp-livereload": "^3.8.1",
-    "gulp-mocha": "^2.2.0",
-    "gulp-nodemon": "^2.0.7",
-    "gulp-plumber": "^1.1.0",
-    "gulp-sourcemaps": "^2.0.0-alpha",
-    "gulp-uglify": "^1.5.3",
-    "gulp-watch": "^4.3.6"
-  }
+		"babelrc": false
+	},
+	"author": "SS & V.",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/sdk-group/service-engine/issues"
+	},
+	"homepage": "https://github.com/sdk-group/service-engine/",
+	"dependencies": {
+		"bluebird": "^3.4.0",
+		"global-queue": "git+https://github.com/artificial-life/global-queue.git#experiments",
+		"gulp-babel": "^6.1.2",
+		"lodash": "^4.13.1",
+		"moment-timezone": "^0.5.4",
+		"node-uuid": "^1.4.7",
+		"validator": "^5.2.0"
+	},
+	"devDependencies": {
+		"Couchbird": "git+https://github.com/YuuKohaku/Couchbird.git",
+		"babel-plugin-remove-comments": "^2.0.0",
+		"babel-plugin-transform-remove-console": "^6.8.0",
+		"babel-plugin-transform-strict-mode": "^6.8.0",
+		"babel-plugin-undeclared-variables-check": "^6.8.0",
+		"babel-preset-es2015": "^6.9.0",
+		"babel-preset-es2015-node5": "^1.2.0",
+		"babel-preset-node5": "^11.1.0",
+		"cbird-rdf": "git+https://github.com/YuuKohaku/cbird-rdf.git",
+		"chai": "^3.5.0",
+		"del": "^2.2.0",
+		"gulp": "^3.9.1",
+		"gulp-babel": "^6.1.2",
+		"gulp-changed": "^1.3.0",
+		"gulp-concat": "^2.6.0",
+		"gulp-develop-server": "^0.5.1",
+		"gulp-livereload": "^3.8.1",
+		"gulp-mocha": "^2.2.0",
+		"gulp-nodemon": "^2.0.7",
+		"gulp-plumber": "^1.1.0",
+		"gulp-sourcemaps": "^2.0.0-alpha",
+		"gulp-uglify": "^1.5.3",
+		"gulp-watch": "^4.3.6"
+	}
 }
