--- a/package.json
+++ b/package.json
@@ -39,9 +39,9 @@
 		"validator": "^5.4.0"
 	},
 	"devDependencies": {
-		"Couchbird": "git+https://github.com/YuuKohaku/Couchbird.git#get-multi-workers",
+		"Couchbird": "git+https://github.com/sdk-group/Couchbird.git#get-multi-workers",
 		"babel-plugin-transform-remove-console": "^6.8.0",
-		"babel-plugin-transform-strict-mode": "^6.8.0",
+		"babel-plugin-transform-strict-mode": "^6.11.3",
 		"babel-plugin-undeclared-variables-check": "^6.8.0",
 		"babel-preset-es2015": "^6.9.0",
 		"babel-preset-es2015-node5": "^1.2.0",
