--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
 		"validator": "^5.5.0"
 	},
 	"devDependencies": {
-		"Couchbird": "git+https://github.com/sdk-group/Couchbird.git#get-multi-workers",
+		"Couchbird": "git+https://github.com/sdk-group/Couchbird.git",
 		"babel-plugin-transform-remove-console": "^6.8.0",
 		"babel-plugin-transform-strict-mode": "^6.11.3",
 		"babel-plugin-undeclared-variables-check": "^6.8.0",
