--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 	"dependencies": {
 		"bluebird": "^3.4.6",
 		"global-queue": "git+https://github.com/artificial-life/global-queue.git#experiments",
+		"iris-builder": "git+https://github.com/sdk-group/iris-builder.git",
 		"gulp-babel": "^6.1.2",
 		"lodash": "^4.16.1",
 		"moment-timezone": "^0.5.5",
