--- a/package.json
+++ b/package.json
@@ -30,14 +30,14 @@
 	},
 	"homepage": "https://github.com/sdk-group/service-engine/",
 	"dependencies": {
-		"bluebird": "^3.4.6",
+		"bluebird": "^3.4.7",
 		"global-queue": "git+https://github.com/artificial-life/global-queue.git#experiments",
 		"iris-builder": "git+https://github.com/sdk-group/iris-builder.git",
 		"gulp-babel": "^6.1.2",
-		"lodash": "^4.17.2",
-		"moment-timezone": "^0.5.9",
+		"lodash": "^4.17.4",
+		"moment-timezone": "^0.5.11",
 		"node-uuid": "^1.4.7",
-		"validator": "^6.1.0"
+		"validator": "^6.2.1"
 	},
 	"devDependencies": {
 		"Couchbird": "git+https://github.com/sdk-group/Couchbird.git",
@@ -46,7 +46,7 @@
 		"babel-plugin-undeclared-variables-check": "^6.8.0",
 		"babel-preset-es2015": "^6.18.0",
 		"babel-preset-es2015-node5": "^1.2.0",
-		"babel-preset-node5": "^11.1.0",
+		"babel-preset-node5": "^12.0.0",
 		"cbird-rdf": "git+https://github.com/YuuKohaku/cbird-rdf.git",
 		"chai": "^3.5.0",
 		"del": "^2.2.2",
@@ -59,7 +59,7 @@
 		"gulp-mocha": "^3.0.1",
 		"gulp-nodemon": "^2.2.1",
 		"gulp-plumber": "^1.1.0",
-		"gulp-sourcemaps": "^2.0.0-alpha",
+		"gulp-sourcemaps": "^2.4.0",
 		"gulp-uglify": "^2.0.0",
 		"gulp-watch": "^4.3.11"
 	}
